fix alignment of sub-nav, ad script

--- a/app/styles/layout/_sub-navigation.scss
+++ b/app/styles/layout/_sub-navigation.scss
@@ -1,6 +1,11 @@
 $sub-nav-bp: new-breakpoint(min-width 500px);
 
 .sub-navigation {
+
+  ul {
+    list-style-type: none;
+  }
+
   a {
     .fa {
       color: $bodytext-black;
@@ -11,10 +16,10 @@ $sub-nav-bp: new-breakpoint(min-width 500px);
   }
 
   .story-link {
-    @include span-columns(8);
+    width: 100%;
 
     @include media($sub-nav-bp) {
-      @include span-columns(4 of 8);
+      @include span-columns(6);
       @include omega();
     }
 
